Updated About page
Added information about source code on GitHub

--- a/OpenSourceScrumTool/Views/Home/About.cshtml
+++ b/OpenSourceScrumTool/Views/Home/About.cshtml
@@ -5,3 +5,4 @@
 <h3>@ViewBag.Message</h3>
 
 <p>This tool is designed and created by Mark Dyer as part of his studies at the University of Hull, UK.</p>
+<p>The source for this project is avalible on GitHub at <a href="https://github.com/markd92/OpenSource-ScrumTool" target="_blank">https://github.com/markd92/OpenSource-ScrumTool</a></p>
