--- a/OpenSourceScrumTool/Views/Home/About.cshtml
+++ b/OpenSourceScrumTool/Views/Home/About.cshtml
@@ -5,4 +5,28 @@
 <h3>@ViewBag.Message</h3>
 
 <p>This tool is designed and created by Mark Dyer as part of his studies at the University of Hull, UK.</p>
-<p>The source for this project is avalible on GitHub at <a href="https://github.com/markd92/OpenSource-ScrumTool" target="_blank">https://github.com/markd92/OpenSource-ScrumTool</a></p>
+<p>The source for this project is avalible on GitHub at <a href="https://github.com/markd92/OpenSource-ScrumTool" target="_blank">https://github.com/markd92/OpenSource-ScrumTool</a>
+</p>
+
+<h3>Acknowledgements</h3>
+<p>This project makes use of several libraries, please take a look at them.</p>
+<ul>
+    <li>ASP.NET - <a href="http://www.asp.net/" target="_blank">http://www.asp.net/</a></li>
+    <li>ASP.NET Identity - <a href="http://www.asp.net/identity" target="_blank">http://www.asp.net/identity</a></li>
+    <li>ASP.NET MVC - <a href="http://www.asp.net/mvc" target="_blank">http://www.asp.net/mvc</a></li>
+    <li>ASP.NET SignalR - <a href="http://signalr.net/" target="_blank">http://signalr.net/</a></li>
+    <li>BootBox - <a href="http://bootboxjs.com/" target="_blank">http://bootboxjs.com/</a></li>
+    <li>BootStrap DatePicker - <a href="https://bootstrap-datepicker.readthedocs.org/en/latest/" target="_blank">https://bootstrap-datepicker.readthedocs.org/en/latest/</a></li>
+    <li>BootStrap - <a href="http://getbootstrap.com/" target="_blank">http://getbootstrap.com/</a></li>
+    <li>jQuery - <a href="https://jquery.com/" target="_blank">https://jquery.com/</a></li>
+    <li>jQuery UI - <a href="https://jqueryui.com/" target="_blank">https://jqueryui.com/</a></li>
+    <li>jQuery UI Touch Punch - <a href="http://touchpunch.furf.com/" target="_blank">http://touchpunch.furf.com/</a></li>
+    <li>jQuery Debounce - <a href="https://code.google.com/p/jquery-debounce/" target="_blank">https://code.google.com/p/jquery-debounce/</a></li>
+    <li>jQuery Validate - <a href="http://jqueryvalidation.org/" target="_blank">http://jqueryvalidation.org/</a></li>
+    <li>Knockout - <a href="http://knockoutjs.com/" target="_blank">http://knockoutjs.com/</a></li>
+    <li>Knockout Mapping - <a href="https://github.com/SteveSanderson/knockout.mapping" target="_blank">https://github.com/SteveSanderson/knockout.mapping</a></li>
+    <li>Modernizr - <a href="http://www.modernizr.com" target="_blank">http://www.modernizr.com</a></li>
+    <li>MomentJS - <a href="http://momentjs.com" target="_blank">http://momentjs.com</a></li>
+    <li>Newtonsoft Json - <a href="http://www.newtonsoft.com/json" target="_blank">http://www.newtonsoft.com/json</a></li>
+    <li>Respond - <a href="https://github.com/scottjehl/Respond" target="_blank">https://github.com/scottjehl/Respond</a></li>
+</ul>
